--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Project-level configuration.
+# Project-level config.
 cmake_minimum_required(VERSION 3.14)
 project(task_manager_app LANGUAGES CXX)
 
@@ -10,7 +10,7 @@ set(BINARY_NAME "task_manager_app")
 # versions of CMake.
 cmake_policy(VERSION 3.14...3.25)
 
-# Define build configuration option.
+# Define build config option.
 get_property(IS_MULTICONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
 if(IS_MULTICONFIG)
   set(CMAKE_CONFIGURATION_TYPES "Debug;Profile;Release"
