--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   amplify_authenticator: ^2.0.0
   email_validator: ^3.0.0
   provider: ^6.1.2
+  http: ^1.2.2
+  http_interceptor: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
